# photo_uploader_script

./: README.md  pyproject.toml
photo_uploader/: main.py
