[project]
name = "photo-uploader-script"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pillow==11.3.0",
    "beautifulsoup4==4.13.4"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
photo-uploader = "photo_uploader.main:main"
